--- a/whp-hpstyle.css
+++ b/whp-hpstyle.css
@@ -33,6 +33,14 @@
     -webkit-backdrop-filter: blur(5px);
     
 }
+#model {
+    height: 40px;
+    width: 200px;
+    border-radius: 25px;
+    margin-bottom: 20px;
+    font-size: 22px;
+    text-align: center;
+}
 #hp {
     font-size: 25px;
     height: 50px;
@@ -82,6 +90,7 @@
 #inputs p2{
     font-size: 22px;
     margin-top: 5px;
+    text-align: center;
 }
 
 
